# PSU-Course-Review-API

./: .env.sample  .gitignore  Jenkinsfile  pyproject.toml
psu_course_review/: config.py  deps.py  main.py  security.py
psu_course_review/models/: __init__.py  comments.py  courses.py  events.py  review_posts.py  users.py
psu_course_review/routers/: __init__.py  authentication.py  comments.py  courses.py  events.py  review_posts.py  root.py  users.py
scripts/: initial-db.py  run-api  run-api.bat
tests/: conftest.py  test_comments.py  test_courses.py  test_events.py  test_review_posts.py
