[tool.poetry]
name = "psu-course-review"
version = "0.1.0"
description = ""
authors = ["Muhammadyohan Kachey <yohun2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
pytest-mock = "^3.14.0"
bcrypt = "^4.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-multipart = "^0.0.9"


[tool.poetry.group.develop.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"
locust = "^2.31.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
